--- a/templates/Exam/editexamquestions.html
+++ b/templates/Exam/editexamquestions.html
@@ -30,6 +30,7 @@
                     <!-- Grid column -->
                 </div>
             </div>
+            {% if exams %}
                 <div class="card-body">
                 <!-- Grid row -->
                 <form action="" method="post">{% csrf_token %}
@@ -79,6 +80,15 @@
                 </form>
                 <br>
             </div>
+            {% else %}
+                <div class="card-header" style="background: none;">
+                    <div class="row">
+                        <div class="col-xl-12 col-md-12 col-12">
+                            <h2>No Exams to show</h2>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
         </div>
     </main>
     <script type="text/javascript">
