--- a/templates/Exam/studentExamsAll.html
+++ b/templates/Exam/studentExamsAll.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 {% else %}
-                <div class="card-header">
+                <div class="card-header" style="background: none;">
                     <div class="row">
                         <div class="col-xl-12 col-md-12 col-12">
                             <h2>No Exams to show</h2>
