--- a/templates/students/addStudents.html
+++ b/templates/students/addStudents.html
@@ -393,91 +393,72 @@
     </div>
     <div class="card-body">
       <form id="submitForm" action="" method="post">{% csrf_token %}
-        <div class="input-group form-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"><i class="fas fa-user"></i></span>
+        <div class="row">
+          <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">First name<span
+                class="text-danger">*</span></label>
+            <input type="text" class="form-control" id="firstName" name='firstName' placeholder="First Name" required>
           </div>
-          <input type="text" class="form-control" id="firstName" name='firstName' placeholder="First Name" required>
-        </div>
-        <div class="input-group form-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"><i class="fas fa-user"></i></span>
+          <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Last name<span
+                class="text-danger">*</span></label>
+            <input type="text" class="form-control" id="lastName" name='lastName' placeholder="Last Name" required>
           </div>
-          <input type="text" class="form-control" id="lastName" name='lastName' placeholder="Last Name" required>
-        </div>
-        <div class="input-group form-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"><i class="fa fa-envelope"></i></span>
+          <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Email Id<span
+                class="text-danger">*</span></label>
+            <input type="email" class="form-control" id="email" name='email' placeholder="Email Address" required>
           </div>
-          <input type="email" class="form-control" id="email" name='email' placeholder="Email Address" required>
-        </div>
-        <div class="input-group form-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"><i class="fa fa-phone"></i></span>
+          <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Phone Number<span
+                class="text-danger">*</span></label>
+            <input type="tel" pattern="[0-9]{10}" class="form-control" id="phone" name='phone'
+              placeholder="Phone Number (10 Digits)" required>
           </div>
-          <input type="tel" pattern="[0-9]{10}" class="form-control" id="phone" name='phone'
-            placeholder="Phone Number (10 Digits)" required>
-        </div>
-        <div class="input-group form-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"><i class="fa fa-map-marker"></i></span>
+          <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Address<span
+                class="text-danger">*</span></label>
+            <input id="pac-input" type="text" class="controls form-control" name='loc' placeholder="Search Address"
+              required>
+            <input type="hidden" id="cityLat" name="cityLat" />
+            <input type="hidden" id="cityLng" name="cityLng" />
           </div>
-          <input id="pac-input" type="text" class="controls form-control" name='loc' placeholder="Search Address"
-            required>
-          <input type="hidden" id="cityLat" name="cityLat" />
-          <input type="hidden" id="cityLng" name="cityLng" />
-        </div>
-        <div class="input-group form-group row school">
-          <div class="input-group-prepend col-sm-12 school-input">
-            <span class="input-group-text"><i class="fas fa-school"></i></span>
+          <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+            <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">School Name<span
+                class="text-danger">*</span></label>
             <input type="text" class="form-control" id="schoolName" name='school' placeholder="School Name" required>
           </div>
         </div>
-        <br>
+        <hr>
 
         <!-- detail start -->
         <div id='mainForm' class="outside">
-          <div class="entry row" style="margin-bottom: 5%;padding-bottom: 2%">
-            <div class="col-sm-2">
-              <div class="form-group">
-                <label for="cn">Class Name</label>
-                <div>
-                  <select name="cn" class="cn custom-select form-control" required="required"
-                    onchange="selectclass(this)">
-                    <option disabled selected value="">Select an option</option>
-                    {% for x in data %}
-                    <option value="{{ x.0 }}">{{ x.0 }}</option>
-                    {% endfor %}
-                  </select>
-                </div>
-              </div>
+          <div class="entry row">
+            <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+              <label class="control-label col-sm-5 col-5 mt-2" style="color:black;" for="cn">Class Name</label>
+              <select name="cn" class="cn custom-select form-control" required="required" onchange="selectclass(this)">
+                <option disabled selected value="">Select an option</option>
+                {% for x in data %}
+                <option value="{{ x.0 }}">{{ x.0 }}</option>
+                {% endfor %}
+              </select>
             </div>
-            <div class="col-sm-2">
-              <div class="form-group">
-                <label for="ctn">Course</label>
-                <div>
-                  <select name="ctn" class="ctn custom-select form-control" required="required" onclick="selectcourse(this)">
-                    <option disabled selected value="">Select an option</option>
+            <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+              <label class="control-label col-sm-5 col-5 mt-2" style="color:black;" for="ctn">Course</label>
+              <select name="ctn" class="ctn custom-select form-control" required="required"
+                onclick="selectcourse(this)">
+                <option disabled selected value="">Select an option</option>
+              </select>
+            </div>
+            <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+              <label class="control-label col-sm-5 col-5 mt-2" style="color:black;" for="ttn">Teaching Type</label>
+                <select name="ttn" class="ttn custom-select form-control" required="required">
+                  <option disabled selected value="">Select an option</option>
                 </select>
-                </div>
               </div>
-            </div>
-            <div class="col-sm-2">
-              <div class="form-group">
-                <label for="ttn">Teaching Type</label>
-                <div>
-                  <select name="ttn" class="ttn custom-select form-control" required="required">
-                    <option disabled selected value="">Select an option</option>
-                </select>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-2">
-              <div class="form-group">
-                <label for="noi">Installments</label>
-                <div>
-                  <select id="no_of_installment" class="form-control" name="noi" id="noi"
-                    required>
+              <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                <label class="control-label col-sm-5 col-5 mt-2" style="color:black;" for="noi">Installments</label>
+                  <select id="no_of_installment" class="form-control" name="noi" id="noi" required>
                     <option selected disabled value="">Installments</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
@@ -487,42 +468,30 @@
                     <option value="6">6</option>
                   </select>
                 </div>
-              </div>
-            </div>
-            <div class="col-sm-2">
-              <div class="form-group">
-                <label for="batchN">Batch Name</label>
-                <div>
-                  <select id="batch" class="form-control" name="batchN" id="batchN" required>
-                    <option selected disabled value="">Batch Name</option>
-                    {% for i in batch %}
-                    <option value="{{i.batchName}}">{{i.batchName}}</option>
-                    {% endfor %}
-                  </select>
+                <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                  <label class="control-label col-sm-5 col-5 mt-2" style="color:black;" for="batchN">Batch Name</label>
+                    <select id="batch" class="form-control" name="batchN" id="batchN" required>
+                      <option selected disabled value="">Batch Name</option>
+                      {% for i in batch %}
+                      <option value="{{i.batchName}}">{{i.batchName}}</option>
+                      {% endfor %}
+                    </select>
+                  </div>
+                  <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                      <label class="control-label col-sm-5 col-5 mt-2" style="color:black;" for="feedis">Fee Discount</label>
+                    <input type="number" class="form-control" name="feedis" id="feedis">
+                  </div>
                 </div>
               </div>
+              <div class="col-lg-12 col-md-12  col-12 d-flex justify-content-end">
+                <button class="btn btn-info btn-md" type="button" onclick="duplicate(this)">Add
+                    New</button>
             </div>
-            <div class="col-sm-2">
-              <div class="form-group">
-                <label for="feedis">Fee Discount</label>
-                <div>
-                  <input type="number" class="custom-text form-control" name="feedis" id="feedis">
+            <hr>
+
+          <div class="col-lg-12 col-md-12 col-12 mt-4 text-center">
+                        <button id='submitBtn' name="submit" type="submit" class="btn btn-info">Register</button>
                 </div>
-              </div>
-            </div>
-            <div class="col-sm-1 form-inline" style="display: flex;align-items: center;">
-              <div class="form-group">
-                <button class="btn btn-warning btn-md float-right" type="button" onclick="duplicate(this)">Add
-                  New</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row container d-flex justify-content-end">
-          <div class="col-sm-2 sm-ml-1">
-            <button id='submitBtn' name="submit" type="submit" class="btn btn-warning">Submit</button>
-          </div>
-        </div>
       </form>
     </div>
   </div>
@@ -795,7 +764,7 @@
   }
 
   function selectcourse(el) {
-      var selected_course = el.value;
+    var selected_course = el.value;
     var selected_class = $(el).closest(".entry").find(".cn").val();
     $.ajax({
       url: "{% url 'findTeaching' %}",
@@ -819,48 +788,33 @@
     });
   }
 
-  function duplicate(){
-      $('.outside').append(`<div class="entry row" style="margin-bottom: 5%;padding-bottom: 2%">
-            <div class="col-sm-2">
-              <div class="form-group">
-                <label for="cn">Class Name</label>
-                <div>
-                  <select name="cn" class="cn custom-select form-control" required="required"
-                    onchange="selectclass(this)">
-                    <option disabled selected value="">Select an option</option>
-                    {% for x in data %}
-                    <option value="{{ x.0 }}">{{ x.0 }}</option>
-                    {% endfor %}
-                  </select>
-                </div>
-              </div>
+  function duplicate() {
+    $('.outside').append(`<div class="entry row">
+            <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+              <label class="control-label col-sm-5 col-5 mt-2" style="color:black;" for="cn">Class Name</label>
+              <select name="cn" class="cn custom-select form-control" required="required" onchange="selectclass(this)">
+                <option disabled selected value="">Select an option</option>
+                {% for x in data %}
+                <option value="{{ x.0 }}">{{ x.0 }}</option>
+                {% endfor %}
+              </select>
             </div>
-            <div class="col-sm-2">
-              <div class="form-group">
-                <label for="ctn">Course</label>
-                <div>
-                  <select name="ctn" class="ctn custom-select form-control" required="required" onclick="selectcourse(this)">
-                    <option disabled selected value="">Select an option</option>
+            <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+              <label class="control-label col-sm-5 col-5 mt-2" style="color:black;" for="ctn">Course</label>
+              <select name="ctn" class="ctn custom-select form-control" required="required"
+                onclick="selectcourse(this)">
+                <option disabled selected value="">Select an option</option>
+              </select>
+            </div>
+            <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+              <label class="control-label col-sm-5 col-5 mt-2" style="color:black;" for="ttn">Teaching Type</label>
+                <select name="ttn" class="ttn custom-select form-control" required="required">
+                  <option disabled selected value="">Select an option</option>
                 </select>
-                </div>
               </div>
-            </div>
-            <div class="col-sm-2">
-              <div class="form-group">
-                <label for="ttn">Teaching Type</label>
-                <div>
-                  <select name="ttn" class="ttn custom-select form-control" required="required">
-                    <option disabled selected value="">Select an option</option>
-                </select>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-2">
-              <div class="form-group">
-                <label for="noi">Installments</label>
-                <div>
-                  <select id="no_of_installment" class="form-control" name="noi" id="noi"
-                    required>
+              <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                <label class="control-label col-sm-5 col-5 mt-2" style="color:black;" for="noi">Installments</label>
+                  <select id="no_of_installment" class="form-control" name="noi" id="noi" required>
                     <option selected disabled value="">Installments</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
@@ -870,30 +824,20 @@
                     <option value="6">6</option>
                   </select>
                 </div>
-              </div>
-            </div>
-            <div class="col-sm-2">
-              <div class="form-group">
-                <label for="batchN">Batch Name</label>
-                <div>
-                  <select id="batch" class="form-control" name="batchN" id="batchN" required>
-                    <option selected disabled value="">Batch Name</option>
-                    {% for i in batch %}
-                    <option value="{{i.batchName}}">{{i.batchName}}</option>
-                    {% endfor %}
-                  </select>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-2">
-              <div class="form-group">
-                <label for="feedis">Fee Discount</label>
-                <div>
-                  <input type="number" class="custom-text form-control" name="feedis" id="feedis">
-                </div>
-              </div>
-            </div>
-          </div>`)
+                <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                  <label class="control-label col-sm-5 col-5 mt-2" style="color:black;" for="batchN">Batch Name</label>
+                    <select id="batch" class="form-control" name="batchN" id="batchN" required>
+                      <option selected disabled value="">Batch Name</option>
+                      {% for i in batch %}
+                      <option value="{{i.batchName}}">{{i.batchName}}</option>
+                      {% endfor %}
+                    </select>
+                  </div>
+                  <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                      <label class="control-label col-sm-5 col-5 mt-2" style="color:black;" for="feedis">Fee Discount</label>
+                    <input type="number" class="form-control" name="feedis" id="feedis">
+                  </div>
+                </div>`)
   }
 </script>
 
